<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3">
    <RelativeLayout
        android:id="@+id/l"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/wte"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Welcometoelection"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textColor="#FFFFFF"/>

        <LinearLayout
            android:id="@+id/mainlin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/electoralname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:maxLines="1"
                    android:layout_marginRight="8dp"
                    android:hint="@string/hint1"
                    android:textColorHint="#FFFFFF" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textinput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Electoralno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="15dp"
                    android:maxLines="1"
                    android:hint="@string/hint2"
                    android:paddingTop="15dp"
                    android:textColorHint="#FFFFFF" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/valid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="8dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/valid"
                    android:textColor="#FFFFFF" />

                <CheckBox
                    android:id="@+id/Checkbox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp" />
            </LinearLayout>
        </LinearLayout>

        <Button

            android:id="@+id/Button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainlin1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            style="@style/Button"
            android:text="@string/next"
            android:textColor="#000000" />


    </RelativeLayout>
</ScrollView>
</android.support.design.widget.CoordinatorLayout>