<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main1"
    android:background="#2196F3"
    xmlns:android="http://schemas.android.com/apk/res/android">




<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/entercandidates"
        android:textColor="#FFFFFF"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:maxLength="15"
                android:hint="@string/can1hint"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="#FFFFFF"
                android:textSize="20sp"
                android:id="@+id/can1"/>
        </android.support.design.widget.TextInputLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#BBDEFB" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:layout_marginLeft="8dp"
                android:hint="@string/can2hint"
                android:inputType="text"
                android:textColorHint="#FFFFFF"
                android:maxLines="1"
                android:textSize="20sp"
                android:id="@+id/can2" />
        </android.support.design.widget.TextInputLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#BBDEFB" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:maxLength="15"
                android:hint="@string/can3hint"
                android:inputType="text"
                android:textColorHint="#FFFFFF"
                android:maxLines="1"
                android:textSize="20sp"
                android:id="@+id/can3" />
        </android.support.design.widget.TextInputLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#BBDEFB" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxLength="15"
                android:inputType="text"
                android:layout_marginLeft="8dp"
                android:hint="@string/can4hint"
                android:textColorHint="#FFFFFF"
                android:textSize="20sp"
                android:id="@+id/can4" />
        </android.support.design.widget.TextInputLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#BBDEFB" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinput5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:maxLength="15"
                android:hint="@string/can5hint"
                android:textColorHint="#FFFFFF"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20sp"
                android:id="@+id/can5" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#BBDEFB" />

        <Button
            android:id="@+id/candidatebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/next"
            android:textColor="#000000"
            style="@style/Button"/>

    </LinearLayout>


</RelativeLayout>
</ScrollView>

