<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#2196F3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:cardview="http://schemas.android.com/tools"

    xmlns:android="http://schemas.android.com/apk/res/android">


        <TextView
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/res"
            android:textColor="#FFFFFF"
            android:textSize="32sp" />
    <RelativeLayout
        android:id="@+id/reso"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mainlinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="80dp">


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:text="@string/candidates"
                    android:layout_gravity="center" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/one"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:layout_marginLeft="16dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textAllCaps="true"
                        android:layout_marginLeft="8dp"
                        android:id="@+id/t1" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:text="@string/two"
                        android:textColor="#FFFFFF"
                        android:layout_marginLeft="16dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textAllCaps="true"
                        android:layout_marginLeft="8dp"
                        android:id="@+id/t2" />
                </LinearLayout>




                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/three"
                        android:textSize="20sp"
                        android:textColor="#FFFFFF"
                        android:textAllCaps="true"
                        android:layout_marginLeft="16dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAllCaps="true"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:layout_marginLeft="8dp"
                        android:id="@+id/t3" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/four"
                        android:textSize="20sp"
                        android:textColor="#FFFFFF"
                        android:layout_marginLeft="16dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#FFFFFF"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:layout_marginLeft="8dp"
                        android:id="@+id/t4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/five"
                        android:textSize="20sp"
                        android:textColor="#FFFFFF"
                        android:layout_marginLeft="16dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#FFFFFF"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:layout_marginLeft="8dp"
                        android:id="@+id/t5" />
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="#BBDEFB" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nof"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/c1"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/c2"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/c3"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/c4"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/c5"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"/>


            </LinearLayout>


        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:id="@+id/result"
            android:text="@string/hello_world"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginTop="63dp"
            android:layout_below="@+id/mainlinear"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
      

    </RelativeLayout>

</RelativeLayout>
</ScrollView>